refractored the code to be more readable and hopefully fixed the issue where junshi and paca can't see the fangs in their wallets

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,18 @@ html,body{
     font-family: 'Karla', sans-serif;
     color:white;
     max-width:100vw;
+    overflow-x: hidden;
 
 }
+.hidden{
+    display:none;
+}
+
 ul{
     list-style: none;
 }
+
+
 #intro{
     width: 100vw;
     height:645px;
@@ -312,8 +319,9 @@ nav{
 #claim-header>input[type=button]{
     background-color: #6950D0;
     color:white;
-    padding:1rem 3rem;
+    padding:1rem;
 }
+
 
 .selected-for-claim{
     border: 5px white solid;
@@ -324,8 +332,9 @@ input[type='number']{
 input{
     border:none;
     border-radius: 1rem;
-    font-size: 25px;
+    font-size: 30px;
     padding:1rem;
+    margin:0 .5rem;
     text-align: center;
 }
 
@@ -406,7 +415,7 @@ input{
 #pxl-arrow{
     position:relative;
     left:45%;
-    top:-40px;
+    top:40px;
     animation: floatUpAndDown 2s infinite ;
 }
 
